<resources>

    <string name="app_name">My-Life</string>

    <string name="str_main_btn1">Nowa aktywność</string>
    <string name="str_main_btn1_alt">Zatrzymaj aktywność</string>
    <string name="str_main_btn2">Aktywności sportowe</string>
    <string name="str_main_btn3">Dzisiejsza aktywność</string>
    <string name="str_main_btn4">Aktywności dzienne</string>
    <string name="str_main_btn5">Ustawienia</string>

    <string name="sport_tab1">Informacje</string>
    <string name="sport_tab2">Statystyki</string>
    <string name="sport_tab3">Trasa</string>
    <string name="sport_tab4">Prędkość</string>
    <string name="sport_tab5">Puls</string>
    <string name="map_start">Start</string>
    <string name="map_finish">Koniec</string>
    <string name="gps_plot_xlabel">Dystans (km)</string>
    <string name="gps_plot_ylabel">Prędkość (km/h)</string>
    <string name="pulse_plot_xlabel">Czas (sek)</string>
    <string name="pulse_plot_ylabel">Puls (bpm)</string>

    <string name="step_tab1">Dane</string>
    <string name="step_tab2">Kroki</string>
    <string name="step_plot_xlabel">Czas (godz.)</string>
    <string name="step_plot_ylabel">Kroki (tys.)</string>

    <string name="title_activity_sport_list">Aktywności sportowe</string>

    <string name="title_activity_step_list">Aktywności dzienne</string>
    <string name="step_list_prefix">(Kroki)</string>

    <string name="title_activity_settings">Ustawienia</string>
    <string name="settings_action_reset">Domyślne</string>

    <string-array name="sport_activity_types">
        <item>Aerobik</item>
        <item>Bieg</item>
        <item>Łyżwy</item>
        <item>Narty</item>
        <item>Rolki</item>
        <item>Rower</item>
        <item>Spacer</item>
    </string-array>
    <string-array name="sport_activity_types_db">
        <item>aero</item>
        <item>bieg</item>
        <item>lyzwy</item>
        <item>narty</item>
        <item>rolki</item>
        <item>rower</item>
        <item>spacer</item>
    </string-array>

    <string name="sport_info_name_title">NAZWA</string>

    <string-array name="sport_info_titles">
        <item>Czujnik</item>
        <item>Typ</item>
        <item>Początek</item>
        <item>Czas trwania</item>
        <item>Czujniki</item>
    </string-array>

    <string-array name="sport_info_device">
        <item>GPS</item>
        <item>Puls</item>
        <item>GPS + Puls</item>
    </string-array>

    <string-array name="sport_stats_titles">
        <item>Min. prędkość</item>
        <item>Max. prędkość</item>
        <item>Śr. prędkość</item>
        <item>Dystans</item>
        <item>Min. puls</item>
        <item>Max. puls</item>
        <item>Śr. puls</item>
        <item>Kalorie</item>
    </string-array>

    <string name="step_info_date_title">DATA</string>

    <string-array name="step_info_titles">
        <item>Liczba kroków</item>
        <item>Średnio kroków</item>
        <item>Kalorie</item>
    </string-array>

    <string name="unit_kmh">km/h</string>
    <string name="unit_km">km</string>
    <string name="unit_bpm">bpm</string>
    <string name="unit_kcal">kcal</string>
    <string name="unit_per_hour">/h</string>

</resources>
