<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1.0">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1.0">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.05"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/logo"
                    android:layout_weight="0.9"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.05"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_main_btn1"
                android:id="@+id/main_btn1"
                android:onClick="btn1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_main_btn2"
                android:id="@+id/main_btn2"
                android:onClick="btn2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_main_btn3"
                android:id="@+id/main_btn3"
                android:onClick="btn3"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_main_btn4"
                android:id="@+id/main_btn4"
                android:onClick="btn4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_main_btn5"
                android:id="@+id/main_btn5"
                android:onClick="btn5"/>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"/>

    </LinearLayout>

</RelativeLayout>
